# audio

./: .gitignore  README.md  looper.rb
app/: CHANGELOG.md  project.clj
app/dev/: user.clj
app/dev-resources/: user.clj
app/resources/: config.edn  dsp  looper.rb  routes-nested.edn  routes.edn  routes.json  sonic-pi-tool
app/src/app/: core.clj  dsp.clj  handlers.clj  http.clj  osc.clj  system.clj
app/src/app/osc/: core.clj
bela-dsp/: .dir-locals.el  README.md
bela-dsp/looper/: looper.fzz  render.cpp
bela-dsp/looper/test/: render.cpp
dsp/: Cargo.toml  Gemfile  README.md  looper.rb  routes.json  routes.rb
dsp/src/: main.rs
experiment/dsp/: Cargo.toml  README.md
experiment/dsp/src/: main.rs
gui/: deps.edn
gui/public/js/compiled/cljs-runtime/: cljs.core.async.impl.dispatch.js.map  cljs.core.js  (+19 more)
gui/src/gui/: view.cljs
guitar-looper/: .gitignore  README.md
guitar-looper/dsp/: Cargo.toml  README.md
guitar-looper/gui/: shadow-cljs.edn
guitar-looper/gui/public/: index.html
guitar-pedal/: .gitignore  README.md
guitar-pedal/prod/: render.cpp
guitar-pedal/prototype/: render.cpp
guitar-pedal/test/: render.cpp
looper/: render.cpp
pdscratch/: guitar-pedal.pd
pdscratch/examples/: 1.01 Our 1st patch.pd  1.02 Oscilator Freq Amp ONOFF.pd  1.03 Oscilator Monitoring.pd  1.04 Oscilator Notes dBs.pd  1.05 Oscilator Integer Notes.pd  1.06 Oscilator Clip.pd  1.06 Oscilator ClipMakeUp.pd
pdscratch/guitar-pedal/: _main.pd  keypress.pd  pedal.pd  tone.pd
rust-looper/: README.md
rust-looper/dsp/: Cargo.toml
rust-looper/gui/src/gui/: core.cljs
(+95 files in other folders)
