[package]
name = "dsp"
version = "0.1.0"
authors = ["Ben Wiz <bwisialowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.25" # I think this can be removed
cpal = "0.10.0"
hound = "3.4.0" # I think this can be removed
ringbuf = "0.2.1" # I think this can be removed
failure = "0.1.6"
rocket = "0.4.2"