[package]
name = "dsp"
version = "0.1.0"
authors = ["Ben Wiz <bwisialowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# wavy = { git = "https://github.com/libcala/wavy", branch = "master" }
anyhow = "1.0.25"
cpal = "0.10.0"
hound = "3.4.0"
ringbuf = "0.2.1"
failure = "0.1.6"